# How-to-use-django-orm-with-fast-api

./: db.sqlite3  pyproject.toml
myproject/: asgi.py  settings.py
todo/: models.py  schemas.py  views.py
todo/migrations/: 0001_initial.py
