[tool.poetry]
name = "fastapidjangoormtutorial"
version = "0.1.0"
description = ""
authors = ["Abdelrahmen Ayman <abdelrahmenayman7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
fastapi = {extras = ["all"], version = "^0.92.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
